RESOLVED FIXED12577
WebKit fails stroke-miterlimit test
https://bugs.webkit.org/show_bug.cgi?id=12577
Summary WebKit fails stroke-miterlimit test
Eric Seidel (no email)
Reported 2007-02-04 03:51:14 PST
WebKit fails stroke-miterlimit test Notice that the second line join does not miter correctly.
Attachments
fix and test updates (4.25 KB, patch)
2007-02-06 07:26 PST, Eric Seidel (no email)
mitz: review+
Eric Seidel (no email)
Comment 1 2007-02-06 07:26:11 PST
Created attachment 12971 [details] fix and test updates
mitz
Comment 2 2007-02-06 07:35:02 PST
Comment on attachment 12971 [details] fix and test updates r=me
Eric Seidel (no email)
Comment 3 2007-02-06 07:44:28 PST
Note You need to log in before you can comment on or make changes to this bug.