WebCore/ksvg2/css/SVGCSSStyleSelector.cpp
@@ -545,7 +545,7 @@ void CSSStyleSelector::applySVGProperty(int id, CSSValue* value)
             else
                 return;
 
-            svgstyle->setStrokeMiterLimit(lroundf(f));
+            svgstyle->setStrokeMiterLimit(f);
             break;
         }
         case SVGCSS_PROP_FILTER:
